2008-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/README.MinGW: Fixed subversion URL to get libobjc
	- reported by Christopher Chandler <chrisjechandler@mac.com>.

2008-03-11  Adam Fedor  <fedor@gnu.org>

	* Version 2.0.5

2008-03-11  Nicola Pero  <nicola.pero@meta-innovation.com>

	Fixed NEEDS_GUI and xxx_NEEDS_GUI options to accept "yes" as well
	as "YES", to be consistent with all the other boolean options in
	gnustep-make.
	* Instance/rules.make (INTERNAL_NEEDS_GUI): Changed to accept
	"yes" as well as "YES"
	* Instance/application.make (NEEDS_GUI): Use yes/no in preference
	to YES/NO for the default values.
	* Instance/bundle.make: Same change.
	* Instance/framework.make: Same change.
	* Instance/gswapp.make: Same change.
	* Instance/gswbundle.make: Same change.
	* Instance/library.make: Same change.
	* Instance/palette.make: Same change.

	* Documentation/releasenotes.texi: Suggest yes/no in preference to
	YES/NO as possible values for NEEDS_GUI and xxx_NEEDS_GUI.
	* RELEASENOTE: Regenerated.
	
2008-03-03  Nicola Pero  <nicola.pero@meta-innovation.com>

	Updated C++ and ObjC++ support so that it automatically uses g++
	to link C++ and ObjC++ files.
	* configure.ac (AC_PROG_CXX): Detect a C++ compiler (if any).
	* configure: Regenerated.
	* config.make.in (CXX, CCFLAGS): New variables.
	* rules.make: Use CXX, not CC, when compiling C++ and
	ObjC++. (ALL_CCFLAGS): Added CCFLAGS.
	* Instance/rules.make: If CC_OBJ_FILES or OBJCC_OBJ_FILES are
	non-empty, set CC to be the same as CXX so that the C++ compiler
	is used to link.

2008-03-02  Nicola Pero  <nicola.pero@meta-innovation.com>

	Updated configure and filesystem layouts so that a ./configure on
	Apple Mac OS X sets up a consistent apple-apple-apple environment.
	* FileSystemLayouts/apple: New filesystem layout for compiling and
	installing apple-apple-apple software.
	* FileSystemLayouts/README: Added the new filesystem layout.